[package]
name = "cgraph"
version = "0.1.0"
authors = ["Celdir <michael.earl7769@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.2.3"
bimap = "0.6.2"
thiserror = "1.0.38"
itertools = "0.12.0"
