[package]
name = "cgraph"
version = "0.1.0"
authors = ["Celdir <michael.earl7769@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
itertools = "0.12.0"
dary_heap = "0.3.6"
ahash = "0.8.7"
nohash = "0.2.0"
disjoint = "0.6.0"
rand = "0.8.5"
